Switching to using latest grammarkit for parser and lexer code generation